fix: revert "height 100% for vertical align center on ie10+"
It was causing modals with scroll to use an incorrect height on all browsers...

--- a/src/scss/_modal.scss
+++ b/src/scss/_modal.scss
@@ -57,7 +57,6 @@
             position: absolute;
             width: 100%;
             min-height: 100%;
-            height: 100%;
             margin: 0;
             padding: 10px;
 			max-height: initial;
